[package]
name = "rs_lib"
version = "0.0.0"
edition = "2021"

[lib]
crate_type = ["cdylib"]

[profile.release]
codegen-units = 1
incremental = true
lto = true
opt-level = "z"

[dependencies]
wasm-bindgen = "=0.2.83"
wasm-bindgen-futures = "0.4.33"
web-sys = { version = "0.3.60", features = ["Response", "Request"] }
gloo-net = { path = "../../gloo/crates/net", features = ["json", "http"]}
gloo-utils = "0.1.6"
serde = { version = "1.0.152", features = ["derive"] }
